[5.40.1] Fix alignment for Upload button in topbar

--- a/src/app/layout/topbar/topbar.component.scss
+++ b/src/app/layout/topbar/topbar.component.scss
@@ -341,6 +341,8 @@
   }
   tsl-button {
     /deep/ button {
+      display: flex;
+      align-items: center;
       font-weight: bold;
       font-size: $font-size-s;
       padding-left: $spacing-s;
